refactor(config)!: 完全抽离 FontForge 路径与主控参数到 config.yaml，完善自动化与文档
- BREAKING CHANGE: FFPYTHON_PATH（FontForge ffpython.exe 路径）已从 auto_all.py 移除，统一由 config.yaml 配置，所有相关代码均通过 conf.FFPYTHON_PATH 获取
- auto_configs.py 增加 FFPYTHON_PATH 配置项读取，默认值与文档一致
- config.yaml 增加 FFPYTHON_PATH 字段，用户只需在此处配置 FontForge 路径
- README.md 配置说明同步，FontForge 路径配置示例改为 YAML 格式，强调无需再手动编辑 py 文件
- 依赖安装说明补充 pyyaml
- 进一步明确 result 目录自动生成 verXX-日期时间 子目录，source_files 缓存机制与自动下载逻辑

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@
 
 # 源文件下载配置
 HINTED: true
-DOWNLOAD_MODE: local  # local 或 auto
+DOWNLOAD_MODE: auto  # local 或 auto
 DOWNLOAD_TIMEOUT: 60
 SOURCE_FILES_DIR: ./source_files
 
@@ -28,7 +28,9 @@ RESULT_DIR: ./result
 
 # 你想复制的其他文件到结果目录
 OTHER_COPY:
-  - SarasaMonoSC-Regular.ttf
-  - SarasaMonoSC-Bold.ttf
-  - SarasaMonoSC-Italic.ttf
-  - SarasaMonoSC-BoldItalic.ttf
+  # - SarasaMonoSC-Regular.ttf
+  # - SarasaMonoSC-Bold.ttf
+  # - SarasaMonoSC-Italic.ttf
+  # - SarasaMonoSC-BoldItalic.ttf
+
+FFPYTHON_PATH: D:/Develop/FontForgeBuilds/bin/ffpython.exe
