--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
 # 功能开关
-ENABLE_MS_YAHEI: true        # 是否生成微软雅黑（更纱黑体伪装）
-ENABLE_SEGOE_UI: true         # 是否生成 Segoe UI（Inter 伪装）
+ENABLE_MS_YAHEI: true          # 是否生成微软雅黑（更纱黑体伪装）
+ENABLE_SEGOE_UI: true          # 是否生成 Segoe UI（Inter 伪装）
 
 SARASA_VERSION_STYLE: hinted   # Sarasa 包类型：hinted、unhinted
 
@@ -15,18 +15,18 @@ RESULT_DIR: ./result          # 结果输出目录
 SOURCE_FILES_DIR: ./source_files  # 字体源文件目录
 
 # 下载设置
-FONT_PACKAGE_SOURCE: custom         # online: 自动下载，local: 仅使用本地包，custom: 使用自定义字体包
+FONT_PACKAGE_SOURCE: online   # online: 自动下载，local: 仅使用本地包，custom: 使用自定义字体包
 DOWNLOAD_TIMEOUT: 60          # 下载超时时间（秒）
 
 # 其他选项
-CLEAN_TEMP_ON_SUCCESS: true  # 主流程完成后是否自动清理 temp 目录（true/false）
+CLEAN_TEMP_ON_SUCCESS: true   # 主流程完成后是否自动清理 temp 目录（true/false）
 
 
 # 自定义字体包路径（仅当 FONT_PACKAGE_SOURCE: custom 时生效）
-# CUSTOM_MS_YAHEI_PACKAGE: 指定自定义中文字体包（zip/7z），放在字体源文件目录
-# CUSTOM_SEGOE_PACKAGE: 指定自定义英文字体包（zip/7z），放在字体源文件目录
-CUSTOM_MS_YAHEI_PACKAGE: 'SarasaGothicSC-TTF-1.0.31.7z'
-CUSTOM_SEGOE_PACKAGE: 'Inter-4.1.zip'
+# CUSTOM_MS_YAHEI_PACKAGE: 指定自定义中文字体包（zip/7z），需放在字体源文件目录
+# CUSTOM_SEGOE_PACKAGE: 指定自定义英文字体包（zip/7z），需放在字体源文件目录
+CUSTOM_MS_YAHEI_PACKAGE: # 例：'SarasaGothicSC-TTF-1.0.31.7z'
+CUSTOM_SEGOE_PACKAGE: # 例：'Inter-4.1.zip'
 
 
 # 自定义字体映射（仅当 FONT_PACKAGE_SOURCE: custom 时生效）
