--- a/defualt_custom.template
+++ b/defualt_custom.template
@@ -1,4 +1,9 @@
-msyh_mapping = [
+# 自定义的字体映射列表仅支持 .ttf 文件和 .otf 文件
+# 映射关系为：目标字体文件名 <-- 源字体文件名
+# 传入otf文件时程序会调用`otf2ttf`将其转换为ttf文件
+# 所以需要`pip install otf2ttf`
+
+msyh_mapping: [
     ["msyh0.ttf",   "SarasaGothicSC-Regular.ttf"],
     ["msyh1.ttf",   "SarasaUiSC-Regular.ttf"],
     ["msyh2.ttf",   "SarasaUiSC-Italic.ttf"],
@@ -18,7 +23,7 @@ msyh_mapping = [
     ["msyhxl0.ttf", "SarasaUiSC-ExtraLight.ttf"],
     ["msyhxl1.ttf", "SarasaGothicSC-ExtraLight.ttf"],
     ["msyhxl2.ttf", "SarasaUiSC-ExtraLightItalic.ttf"],
-    ["msyhxl3.ttf", "SarasaGothicSC-ExtraLightItalic.ttf"],
+    ["msyhxl3.ttf", "SarasaGothicSC-ExtraLightItalic.ttf"]
 ]
 
 
@@ -34,5 +39,5 @@ segoe_mapping: [
   ["seguibl.ttf",    "Inter-Black.ttf"],
   ["seguibli.ttf",   "Inter-BlackItalic.ttf"],
   ["seguisb.ttf",    "Inter-SemiBold.ttf"],
-  ["seguisbi.ttf",   "Inter-SemiBoldItalic.ttf"],
+  ["seguisbi.ttf",   "Inter-SemiBoldItalic.ttf"]
 ]
