--- a/defualt_custom.template
+++ b/defualt_custom.template
@@ -1,29 +1,28 @@
 # 自定义的字体映射列表仅支持 .ttf 文件和 .otf 文件
 # 映射关系为：目标字体文件名 <-- 源字体文件名
-# 传入otf文件时程序会调用`otf2ttf`将其转换为ttf文件
-# 所以需要`pip install otf2ttf`
+# 该 template 文件不参与程序流程，仅供填写参考
 
 msyh_mapping: [
-    ["msyh0.ttf",   "SarasaGothicSC-Regular.ttf"],
-    ["msyh1.ttf",   "SarasaUiSC-Regular.ttf"],
-    ["msyh2.ttf",   "SarasaUiSC-Italic.ttf"],
-    ["msyh3.ttf",   "SarasaGothicSC-Italic.ttf"],
-    ["msyhbd0.ttf", "SarasaUiSC-Bold.ttf"],
-    ["msyhbd1.ttf", "SarasaGothicSC-Bold.ttf"],
-    ["msyhbd2.ttf", "SarasaUiSC-BoldItalic.ttf"],
-    ["msyhbd3.ttf", "SarasaGothicSC-BoldItalic.ttf"],
-    ["msyhl0.ttf",  "SarasaUiSC-Light.ttf"],
-    ["msyhl1.ttf",  "SarasaGothicSC-Light.ttf"],
-    ["msyhl2.ttf",  "SarasaUiSC-LightItalic.ttf"],
-    ["msyhl3.ttf",  "SarasaGothicSC-LightItalic.ttf"],
-    ["msyhsb0.ttf", "SarasaUiSC-SemiBold.ttf"],
-    ["msyhsb1.ttf", "SarasaGothicSC-SemiBold.ttf"],
-    ["msyhsb2.ttf", "SarasaUiSC-SemiBoldItalic.ttf"],
-    ["msyhsb3.ttf", "SarasaGothicSC-SemiBoldItalic.ttf"],
-    ["msyhxl0.ttf", "SarasaUiSC-ExtraLight.ttf"],
-    ["msyhxl1.ttf", "SarasaGothicSC-ExtraLight.ttf"],
-    ["msyhxl2.ttf", "SarasaUiSC-ExtraLightItalic.ttf"],
-    ["msyhxl3.ttf", "SarasaGothicSC-ExtraLightItalic.ttf"]
+    ["msyh0.ttf", "SarasaGothicSC-Regular.ttf"],
+    ["msyh1.ttf", "SarasaUiSC-Regular.ttf"],
+    ["msyh2.ttf", "SarasaGothicSC-Italic.ttf"],
+    ["msyh3.ttf", "SarasaUiSC-Italic.ttf"],
+    ["msyhbd0.ttf", "SarasaGothicSC-Bold.ttf"],
+    ["msyhbd1.ttf", "SarasaUiSC-Bold.ttf"],
+    ["msyhbd2.ttf", "SarasaGothicSC-BoldItalic.ttf"],
+    ["msyhbd3.ttf", "SarasaUi-BoldItalic.ttf"],
+    ["msyhl0.ttf", "SarasaGothicSC-Light.ttf"],
+    ["msyhl1.ttf", "SarasaUiSC-Light.ttf"],
+    ["msyhl2.ttf", "SarasaGothicSC-LightItalic.ttf"],
+    ["msyhl3.ttf", "SarasaUiSC-LightItalic.ttf"],
+    ["msyhsb0.ttf", "SarasaGothicSC-SemiBold.ttf"],
+    ["msyhsb1.ttf", "SarasaUiSC-SemiBold.ttf"],
+    ["msyhsb2.ttf", "SarasaGothicSC-SemiBoldItalic.ttf"],
+    ["msyhsb3.ttf", "SarasaUiSC-SemiBoldItalic.ttf"],
+    ["msyhxl0.ttf", "SarasaGothicSC-ExtraLight.ttf"],
+    ["msyhxl1.ttf", "SarasaUiSC-ExtraLight.ttf"],
+    ["msyhxl2.ttf", "SarasaGothicSC-ExtraLightItalic.ttf"],
+    ["msyhxl3.ttf", "SarasaUiSC-ExtraLightItalic.ttf"]
 ]
 
 
